variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:9: error: not found: value casOrange
    casOrange += 1;
    ^